# bazeltest

./: .bazelignore  .bazelrc  .gitignore  .swcrc  BUCK  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  dprint.json  esbuild-graphql-plugin.mjs  lol.bzl  main.js  node-wrapper.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
mergetest/a/: BUILD.bazel  shared.txt
mergetest/a/sub/: a_sub_a.txt  shared.txt
mergetest/b/: BUILD.bazel  b_a.txt  shared.txt
mergetest/b/sub/: b_sub_a.txt  shared.txt
mergetest/c/: BUILD.bazel
minimalist_rules_js/: BUILD.bazel  defs.bzl
p1/: BUILD  run.sh
p2/: BUILD  run.sh
package/a/: BUILD  main.js  package.json
package/app/: BUILD  BUILD.bazel  index.html  main.js  package-lock.json  package.json  vite.config.js
package/app/src/: BUILD.bazel  app.jsx  main.js  main.jsx
package/app_with_external_state/: BUILD.bazel  package.json
package/app_with_external_state/src/: main.js
package/b/: BUILD  main.js  package.json
package/c/: BUILD  main.ts  package.json
package/js_with_deps/: BUILD.bazel  esbuild.config.mjs  lol.js  main.jsx  package.json
package/ts/: BUILD.bazel  main.ts  package.json
package/vanilla_js/: BUILD  BUILD.bazel  main.js  package.json
pseudogazelle/: BUILD.bazel  main.mjs  package.json
src/: main.js  utils.js
utils/echo/: BUILD.bazel  echo.mjs
