load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "ts_config",
    src = "tsconfig.json",
)

npm_link_all_packages(name = "node_modules")

copy_to_bin(
    name = "swcrc",
    srcs = [".swcrc"],
)

alias(
    name = "dev",
    actual = "//package/app:dev",
    tags = [
        # Found this one in the vite example[1], but can’t find documentation for it anywhere.
        # It also doesn’t fix the problem.
        # [1]: https://github.com/pziggo/bazel-examples/tree/main/ibazel

        # "ibazel_live_reload",
        "ibazel_notify_changes",
    ],
)

filegroup(
    name = "app",
    srcs = ["//package/app"],
)
