
bazel_dep(name = "aspect_bazel_lib", version = "2.0.1")
bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
bazel_dep(name = "rules_nodejs", version = "6.0.2")

node = use_extensions("@rules_nodejs//node:extension.bzl", "node");
node.toolchain(
	node_version = "20.8.0"
);

bazel_dep(name = "aspect_rules_js", version = "1.34.1")

npm = use_extensions("@aspect_rules_js//npm:extensions.bzl", "npm");
npm.npm_translate_lock(
	pnpm_lock = "//:pnpm-lock.yaml"
)

bazel_dep(name = "aspect_rules_ts", version = "2.1.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.0.1")
