bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")
bazel_dep(name = "aspect_rules_swc", version = "1.2.2")
bazel_dep(name = "aspect_rules_esbuild", version = "0.18.0")

bazel_dep(name = "rules_nodejs", version = "6.0.5")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_version = "20.8.0",
)

bazel_dep(name = "aspect_rules_js", version = "1.38.0")
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_ts", version = "2.2.0")
ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
ts.deps(
    ts_version_from = "//:package.json",
    ts_integrity = "sha512-mI4WrpHsbCIcwT9cF4FZvr80QUeKvsUsUvKDoR+X/7XHQH98xYD8YHZg7ANtz2GtZt/CBq2QJ0thkGJMHfqc1w==",
)
use_repo(ts, "npm_typescript")
