load("//minimalist_rules_js:defs.bzl", "npm_link_all_packages", "run_js_binary")

npm_link_all_packages(
    name = "node_modules",
)

run_js_binary(
    name = "app",
    src = "src/main.js",
    outs = ["version.txt"],
    args = ["$${EXECROOT}/$(location :version.txt)"],
    node_modules = ":node_modules",
)
