load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_devserver")
load("@npm//package/app:vite/package_json.bzl", vite_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

SRCS = glob(["src/**"]) + [
    "index.html",
    "vite.config.js",
    "package.json",
]

DEPS = [
    "//:node_modules/react",
    "//:node_modules/react-dom",
    ":node_modules",
]

vite_bin.vite(
    name = "app",
    srcs = SRCS + DEPS,
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
)

vite_bin.vite_binary(
    name = "vite_dev",
)

js_run_devserver(
    name = "dev",
    chdir = package_name(),
    data = SRCS + DEPS,
    tool = ":vite_dev",
)
