load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_devserver")
load("@npm//package/app:vite/package_json.bzl", vite_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

SRCS = glob(["src/**"]) + [
    "index.html",
    "vite.config.js",
]

DEPS = [":node_modules", ":data"]

genrule(
    name = "check_file",
    cmd = """
        echo "RERUNNING.............."
        cat $(location data.txt) | wc -c > $(location check)
    """,
    srcs = [":data.txt"],
    outs = ["check"],
    tags = ["no-cache"]
)

genrule(
    name = "data",
    srcs = [":check_file"],
    cmd = """
        date > $(location data.txt)
    """,
    outs = ["data.txt"]
)

vite_bin.vite(
    name = "app_with_external_state",
    args = ["build"],
    out_dirs = ["dist"],
    chdir = package_name(),
    srcs = SRCS + DEPS,
)

vite_bin.vite_binary(
    name = "dev",
    chdir = package_name(),
    data = SRCS + DEPS,
)


