load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

esbuild(
    name = "bundle",
    srcs = glob([
        "**/*.jsx",
        "**/*.js",
    ]),
    config = "esbuild.config.mjs",
    entry_point = "main.jsx",
    output = "bundle.js",
    deps = [
        ":node_modules/preact",
    ],
)

js_library(
    name = "lib",
    srcs = [
        ":bundle",
    ],
)

npm_package(
    name = "js_with_deps",
    # The package name does not need to be specified in this target since the name
    # that this package is linked as is set by the pnpm lockfile. If it is
    # specified here then it won't be load bearing since the value in the pnpm
    # lockfile will take precedence.
    srcs = [
        "package.json",
        ":lib",
    ],
)
