load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "main",
    srcs = ["main.js"],
    data = [
        "//:node_modules/@surma/ts",
        "//:node_modules/@surma/vanilla_js",
    ],
    deps = [
        "//:node_modules/@surma/ts",
        "//:node_modules/@surma/vanilla_js",
    ],
)
